# NoctisPro

./: .duckdns_config  .env  .env.container  .env.demo  .env.development  .env.development.local  .env.docker  .env.internet.example  .env.ngrok  .env.production  .env.production.clean  .env.production.example  .env.production.fixed  .env.production.template  .env.server.example  .env.tmp  .tunnel-url  .tunnel_config  ADMIN_ONLY_SECURITY_CONFIRMED.md  ADMIN_SETUP.md  ADVANCED_DICOM_VIEWER.md  AUTHENTICATION_FIX_SUMMARY.md  AUTONOMOUS_DEPLOYMENT_SUMMARY.md  AUTOSTART_INSTRUCTIONS.md  AUTOSTART_README.md  AUTOSTART_SETUP_COMPLETE.md  AUTO_DEPLOYMENT_SETUP.md  AUTO_DEPLOY_README.md  AUTO_STARTUP_README.md  AUTO_START_SETUP.md  BULLETPROOF_AUTOSTART.sh  BULLETPROOF_DEPLOYMENT_GUIDE.md  BUTTON_FIXES_SUMMARY.md  BUYER_DEMO_README.md  CANVAS_FIXES_EXPLAINED.md  CHAT_AND_UI_IMPROVEMENTS.md  CHECK_WINDOWS2019_READY.ps1  CLOUDFLARE_DEPLOYMENT_COMPLETE.md  COMPARISON_GUIDE.md  COMPLETE_SETUP_GUIDE.md  (+568 more)
accounts/: admin.py  models.py  urls.py  views.py
admin_panel/: decorators.py  urls.py  utils.py  views.py  views_permissions.py
ai_analysis/: models.py  urls.py  views.py
archived_scripts/: deploy-server-duckdns.sh  deploy-server.sh  deploy_noctis_production.sh  one-line-deploy.sh
backup_20250829_031817/: requirements.txt
backup_20250901_144302/: requirements.txt
backup_20250901_144506/: requirements.txt
backup_20250901_172133/: requirements.txt
backup_docs/: DEPLOYMENT_GUIDE.md  FINAL_DEPLOYMENT_STATUS.md  FIX_SUMMARY.md  README.md  (+2 more)
cpp_viewer/: CMakeLists.txt  main.cpp
(+427 files in other folders)
